refactor: Упрощен код в RequestRegistryServiceImpl, добавлен метод для перевода статусов и улучшена фильтрация запросов